reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__actions__pipeline.rs_line_402_col_5_001.log

*** crates/tracewake-core/src/actions/pipeline.rs:402:5: replace body_exclusive_reservation_conflict -> Option<EventId> with Some(Default::default())

*** mutation diff:
--- crates/tracewake-core/src/actions/pipeline.rs
+++ replace body_exclusive_reservation_conflict -> Option<EventId> with Some(Default::default())
@@ -394,32 +394,17 @@
         appended_events,
     }
 }
 
 fn body_exclusive_reservation_conflict(
     context: &PipelineContext<'_>,
     candidate_events: &[EventEnvelope],
 ) -> Option<EventId> {
-    let actor_id = candidate_events.iter().find_map(|event| {
-        is_body_exclusive_start(event)
-            .then(|| event.actor_id.clone())
-            .flatten()
-    })?;
-    if !candidate_events.iter().any(is_body_exclusive_start) {
-        return None;
-    }
-
-    let open_starts = crate::need_accounting::open_body_exclusive_starts(
-        context.log,
-        &actor_id,
-        context.ordering_key.sim_tick,
-    )
-    .expect("duplicate duration terminals are rejected before reservation checks");
-    open_starts.into_iter().next()
+    Some(Default::default()) /* ~ changed by cargo-mutants ~ */
 }
 
 fn is_body_exclusive_start(event: &EventEnvelope) -> bool {
     matches!(
         event.event_type,
         EventKind::SleepStarted | EventKind::WorkBlockStarted
     ) && event
         .payload


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/actions/pipeline.rs` has changed (1781905865.983925454s, 4s after last build at 1781905861.075925435s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `ids::EventId: Default` is not satisfied
   --> crates/tracewake-core/src/actions/pipeline.rs:402:10
    |
402 |     Some(Default::default()) /* ~ changed by cargo-mutants ~ */
    |          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `ids::EventId`
   --> crates/tracewake-core/src/ids.rs:78:9
    |
 78 |         pub struct $name(StableId);
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
137 | stable_id_type!(EventId);
    | ------------------------ in this macro invocation
    = note: this error originates in the macro `stable_id_type` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `EventId: Default` is not satisfied
   --> crates/tracewake-core/src/actions/pipeline.rs:402:10
    |
402 |     Some(Default::default()) /* ~ changed by cargo-mutants ~ */
    |          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `EventId`
   --> crates/tracewake-core/src/ids.rs:78:9
    |
 78 |         pub struct $name(StableId);
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
137 | stable_id_type!(EventId);
    | ------------------------ in this macro invocation
    = note: this error originates in the macro `stable_id_type` (in Nightly builds, run with -Z macro-backtrace for more info)

error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
